--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -9,21 +9,21 @@ source:
   path: ..
 
 build:
+  skip: true  # [py<37]
   number: 0
-  script: python -m pip install . -vvv
+  script: {{ PYTHON }} -m pip install . -vvv
 
 requirements:
   build:
     - {{ compiler('cxx') }}
     - {{ compiler('c') }}
-
   host:
-    - python
     - pip
-    - pybind11 >=2.6.0
-
+    - pybind11
+    - python
   run:
-    - numpy
+    - numpy >=1.17.3
+    - pybind11 >=2.6.0
     - python
 
 test:
