--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,6 +3,4 @@ current_version = 0.0.3
 commit = True
 tag = True
 
-[bumpversion:file:setup.py]
-
-[bumpversion:file:conda.recipe/meta.yaml]
+[bumpversion:file:version.py]
